--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,9 @@ button {
   color: transparent;
   background: var(--color-neutral-light);
   border-radius: 5px;
+  transition: background 1.6s, width 1s, height 1s;
 }
+
 
 .space {
   width: 15px;
@@ -95,6 +97,13 @@ button {
 .show {
   color: #000;
   background-color: #76CE82;
+  transition: width .5s, height .5s;
+}
+
+.show:hover,
+.letter:hover {
+  width: 100px;
+  height: 100px;
 }
 
 /* Keyboard */
