Center endgame text and button

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,9 @@ button {
 
 /* Overlay */
 
-#overlay {
+#overlay,
+.win,
+.lose {
   display: flex;
   flex-direction: column;
   position: fixed;
